Исправления в промежуточной версии